# kafka-to-es-orquestrator

./: .gitignore  Dockerfile  Makefile  main.py  pyproject.toml  settings.toml
service/: __init__.py
service/elastic/: elastic.py
service/kafka/: consumer.py  producer.py
service/models/: __init__.py  business_offering_contract_created_processed.py  business_offering_financial_dataclass.py  financial_business_offer.py
service/resources/: schema.avsc
