[tool.poetry]
name = "business-offering-contract-integration"
version = "0.1.0"
description = ""
authors = ["Joao Pedro Watson <joaopedrowatson@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
elasticsearch = "^8.4.0"
python-dotenv = "^0.20.0"
dacite = "^1.6.0"
confluent-kafka = {extras = ["avro"], version = "^1.9.2"}
dynaconf = "^3.1.9"

[tool.poetry.dev-dependencies]
blue = "^0.9.1"
isort = "^5.10.1"
prospector = "^1.7.7"
certifi = "^2022.6.15"
pip-audit = "^2.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
